[gd_scene load_steps=15 format=3 uid="uid://b4uthac7088mf"]

[ext_resource type="Script" path="res://scenes/player/player_small.gd" id="1_4xrcf"]
[ext_resource type="PackedScene" uid="uid://c6gdhsj8mrhij" path="res://scenes/player/collision_polygon_small_player.tscn" id="3_5ogmh"]
[ext_resource type="Texture2D" uid="uid://0ytpb4oxttbo" path="res://assets/small_player.png" id="3_8036d"]

[sub_resource type="Animation" id="Animation_o53pk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vndpv"]
resource_name = "breaking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_vw88l"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3),
"transitions": PackedFloat32Array(1, 2.63902, 3.86375),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -70), Vector2(0, 300)]
}

[sub_resource type="Animation" id="Animation_2bdq7"]
resource_name = "falling"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_btbd1"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jc0td"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_yptv2"]
resource_name = "walk"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svh1g"]
_data = {
"RESET": SubResource("Animation_o53pk"),
"breaking": SubResource("Animation_vndpv"),
"death": SubResource("Animation_vw88l"),
"falling": SubResource("Animation_2bdq7"),
"idle": SubResource("Animation_btbd1"),
"jump": SubResource("Animation_jc0td"),
"walk": SubResource("Animation_yptv2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qucfd"]
size = Vector2(6, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sckxt"]
size = Vector2(12, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dgbq"]
size = Vector2(14, 13)

[node name="PlayerSmall" type="CharacterBody2D"]
position = Vector2(99, 359)
script = ExtResource("1_4xrcf")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CollisionPolygon2D" parent="." instance=ExtResource("3_5ogmh")]
z_index = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
texture_repeat = 1
texture = ExtResource("3_8036d")
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_svh1g")
}

[node name="HeadPunch" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadPunch"]
z_index = 1
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_qucfd")

[node name="FootStomp" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootStomp"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_sckxt")

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0dgbq")

[connection signal="body_entered" from="HeadPunch" to="." method="_on_head_punch_body_entered"]
[connection signal="body_entered" from="FootStomp" to="." method="_on_foot_stomp_body_entered"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_body_area_body_entered"]
